Fix z-index.

--- a/themes/finna/less/bootstrap/finna/organisation-page.less
+++ b/themes/finna/less/bootstrap/finna/organisation-page.less
@@ -256,7 +256,6 @@ section.main.template-dir-content.template-name-content {
 
         & .leaflet-container {
             & .leaflet-top {
-                //z-index: 99;
                 & .leaflet-bar {
                     z-index: initial;
                 }
@@ -381,7 +380,7 @@ section.main.template-dir-content.template-name-content {
                 color: white;
                 padding: 15px 20px;
                 position: absolute;
-                z-index: 101;
+                z-index: 1001;
                 top: 42px;
                 left: 15px;
                 display: none;
